@@ -78,6 +78,17 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.research.cybersec.CyberSecurityApplication</mainClass>
+                    <commandlineArgs>--add-modules javafx.controls,javafx.fxml</commandlineArgs>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
